--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,124 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@800&family=Poppins:wght@700&display=swap');
+body, html, #root {
+    padding: 0;
+    margin: 0;
+    font-size: 18px;
+    /* overscroll-behavior-y: none; */
+    background-color: #000000;
+    color: black;
+    /* overflow: hidden; */
+  }
+
+  *, *::before, *::after {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    /* defualt app transition */
+    transition: all 0.8s ease-in-out;
+    /* font-family: "Josefin Sans", sans-serif; */
+  }
+
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
 }
+#root{
+  display: none;
+}
+#time{
+  text-align: center;
+  font-size: 55px;
+  color: white;
+  margin: 20px;
+}
+#tytul{
+  text-align: center;
+  font-size: 55px;
+  margin-top: 20px;
+  color: white;
+  background: -webkit-linear-gradient(#AD1DEB, #5b60ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: 'Poppins', sans-serif;
+  line-height: 1.1em;
+}
+#tykajacyZegar{
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-size: 55px; 
+  margin-top: 60px;
+  margin-bottom: 60px;
+  text-align: center;
+  margin-top: 20px;
+  color: white;
+
+
+}
+#wrap1{
+  margin-top: 40px;
+  margin-left: 10%;
+  margin-right: 10%;
+  border-width:3px; 
+  border-style:solid; 
+  border-color:#1c1c1c;
+  border-radius: 15px;
+  background-color: #1c1c1c;
+}
+#wrap2{
+  margin-top: 30px;
+  margin-left: 10%;
+  margin-right: 10%;
+  border-width:3px; 
+  border-style:solid; 
+  border-color:#1c1c1c;
+  border-radius: 15px;
+  background-color: #1c1c1c;
+  /* box-shadow: 0 0 5px 2px #cf3a89,
+              0 0 5px 2px #ff1493,
+              0 0 30px 2px #ff1493,
+              0 0 30px 2px #ff1493; */
+}
+#wrap3{
+  margin-top: 30px;
+  margin-left: 10%;
+  margin-right: 10%;
+  border-width:3px; 
+  border-style:solid; 
+  border-color:#1c1c1c;
+  border-radius: 15px;
+  background-color: #1c1c1c;
+}
+#podTytul{
+  text-align: center;
+  font-size: 25px;
+  margin-top: 20px;
+  color: white;
+}
+#wyswietlLekcje{
+  text-align: center;
+  font-size: 25px;
+  margin: 30px;
+  color: white;
+}
+#aktualnaData{
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  margin-top: -60px;
+  margin-bottom: 20px;
+}
+#ikonkaZegarka{
+  color: rgb(176, 176, 176);
+  font-weight: 600;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: -15px;
+
+}
+#autor{
+  color: white;
+  font-size: 25px;
+  margin-top: 40px;
+  text-align: center;
 }
