--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@ html,
 /* #scroll-area{
   overflow: auto;
 } */
+a {
+  text-decoration: none;
+  color: rgb(176, 176, 176);
+}
 #root {
   display: none;
 }
@@ -34,8 +38,8 @@ html,
   font-size: 55px;
   color: white;
   margin: 20px;
-  margin-bottom: 9px;
-  margin-top: 13px;
+  margin-bottom: 7px;
+  margin-top: 23px;
 }
 #tytul {
   text-align: center;
@@ -50,7 +54,7 @@ html,
 }
 #tykajacyZegar {
   font-size: 55px;
-  margin-top: 13px;
+  margin-top: 23px;
   margin-bottom: 60px;
   text-align: center;
   color: white;
@@ -61,9 +65,16 @@ html,
   margin-right: 10%;
   border-width: 3px;
   border-style: solid;
-  border-color: #202020;
+  border-color: #171717;
   border-radius: 15px;
   background-color: #202020;
+  background: linear-gradient(
+    to bottom,
+    #262626 0%,
+    #262626 30%,
+    #202020 30%,
+    #202020 100%
+  );
 }
 #wrap2 {
   margin-top: 20px;
@@ -71,9 +82,16 @@ html,
   margin-right: 10%;
   border-width: 3px;
   border-style: solid;
-  border-color: #202020;
+  border-color: #171717;
   border-radius: 15px;
   background-color: #202020;
+  background: linear-gradient(
+    to bottom,
+    #262626 0%,
+    #262626 36%,
+    #202020 36%,
+    #202020 100%
+  );
   /* box-shadow: 0 0 5px 2px #cf3a89,
               0 0 5px 2px #ff1493,
               0 0 30px 2px #ff1493,
@@ -85,9 +103,16 @@ html,
   margin-right: 10%;
   border-width: 3px;
   border-style: solid;
-  border-color: #202020;
+  border-color: #171717;
   border-radius: 15px;
   background-color: #202020;
+  background: linear-gradient(
+    to bottom,
+    #262626 0%,
+    #262626 43px,
+    #202020 43px,
+    #202020 100%
+  );
 }
 #wrap4 {
   margin-top: 20px;
@@ -95,9 +120,16 @@ html,
   margin-right: 10%;
   border-width: 3px;
   border-style: solid;
-  border-color: #202020;
+  border-color: #171717;
   border-radius: 15px;
   background-color: #202020;
+  background: linear-gradient(
+    to bottom,
+    #262626 0%,
+    #262626 46%,
+    #202020 46%,
+    #202020 100%
+  );
   /* box-shadow: 0 0 5px 2px #ffffff,
               0 0 5px 2px #ffffff,
               0 0 10px 2px #ffffff,
@@ -176,26 +208,27 @@ html,
   font-size: 25px;
   margin: 30px;
   color: white;
-  margin-bottom: 15px;
-  margin-top: 25px;
+  margin-bottom: 13px;
+  margin-top: 33px;
 }
 #doSwiatPozostalo {
   text-align: center;
   font-size: 25px;
   margin: 30px;
   color: white;
-  margin-bottom: 15px;
-  margin-top: 25px;
+  margin-bottom: 13px;
+  margin-top: 33px;
 }
 #aktualnaData {
   text-align: center;
   font-size: 20px;
   color: white;
-  margin-top: -60px;
-  margin-bottom: 20px;
+  margin-top: -65px;
+  margin-bottom: 10px;
 }
 #ikonkaZegarka {
-  color: rgb(176, 176, 176);
+  color: rgb(196, 196, 196);
+  font-size: 18px;
   font-weight: 600;
   text-align: center;
   margin-top: 10px;
@@ -207,4 +240,12 @@ html,
   margin-top: 20px;
   margin-bottom: 20px;
   text-align: center;
+}
+hr {
+  /* margin-top: 25px;
+  margin-bottom: -10px;
+  border: 1px solid rgb(57, 57, 57);
+  margin-left: 20%;
+  margin-right: 20%; */
+  display: none;
 }
